Added CSS and about page

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"
 	</head>
 	<body>
-		<h1>I'm the index page!</h1>
-		<p>You see me first!</p>
-		<p><a href="about.html">About page</a></p>
+		<h1>Im the about page!</h1>
+		<p>Stuff about me here!</p>
+		<p><a href="index.html">Index page</a></p>
 	</body>
 </html>
