Fixed 404, Changed to Block Layout system

--- a/404.html
+++ b/404.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>404: Not found</title>
+	</head>
 	<body>
 		<h1>404: Page not found</h1>
 		<p>Are you lost? That page doesn't exist!</p>
-		<p>Back to <a href="about.html">Index page</a></p>
+		<p>Back to <a href="index.html">Index page</a></p>
 	</body>
 </html>
