--- a/about.html
+++ b/about.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Ahndrek's About Page</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"
 	</head>
 	<body>
-		<h1>Im the about page!</h1>
-		<p>Stuff about me here!</p>
-		<p><a href="index.html">Index page</a></p>
+		<div class="header">
+			<h1>About Page</h1>
+		</div>
+		<div class="topnav">
+			<a href="index.html">Index</a>
+			<a href="#">About</a>
+		</div>
 	</body>
 </html>
