--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Ahndrek's Index Page</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"
 	</head>
 	<body>
-		<h1>I'm the index page!</h1>
-		<p>You see me first!</p>
-		<p><a href="about.html">About page</a></p>
+		<div class="header">
+			<h1>Index Page</h1>
+		</div>
+		<div class="topnav">
+			<a href="#">Index</a>
+			<a href="about.html">About</a>
+		</div>
 	</body>
 </html>
