Added footer CSS, projects page

--- a/projects.html
+++ b/projects.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ahndrek's About Page</title>
+		<title>Ahndrek's Projects Page</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"
 	</head>
 	<body>
 		<div class="header">
-			<h1>About Page</h1>
+			<h1>Projects Page</h1>
 		</div>
 		<div class="topnav">
 			<a href="index.html">Index</a>
-			<a href="projects.html">Projects</a>
-			<a href="#">About</a>
+			<a href="#">Projects</a>
+			<a href="about.html">About</a>
 		</div>
 	</body>
 </html>
