--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		</div>
 		<div class="topnav">
 			<a href="#">Index</a>
+			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
 		</div>
 	</body>
