--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
 		</div>
+		<p>OwO</p>
+		<p>What's this? A webpage?</p>
 	</body>
 </html>
