--- a/projects.html
+++ b/projects.html
@@ -13,5 +13,11 @@
 			<a href="#">Projects</a>
 			<a href="about.html">About</a>
 		</div>
+		<div>
+			<p>I'm content!</p>
+		</div>
+		<div class="footer">
+			<p>Footer Test</p>
+		</div>
 	</body>
 </html>
