Added Footer section to all pages

--- a/about.html
+++ b/about.html
@@ -13,5 +13,11 @@
 			<a href="projects.html">Projects</a>
 			<a href="#">About</a>
 		</div>
+		<div>
+			<p>I'm content!</p>
+		</div>
+		<div class="footer">
+			<p>Footer Test</p>
+		</div>
 	</body>
 </html>
