--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
 		</div>
-		<p>OwO</p>
-		<p>What's this? A webpage?</p>
+		<div>
+			<p>Welcome to my webpage!</p>
+		</div>
+		<div class="footer">
+			<p>Footer Test</p>
+		</div>
 	</body>
 </html>
