--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 	<head>
 		<title>Ahndrek's Index Page</title>
-		<link rel="stylesheet" type="text/css" href="stylesheet.css"
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
+		<a name="top"></a>
 		<div class="header">
 			<h1>Index Page</h1>
 		</div>
 		<div class="topnav">
 			<a href="#">Index</a>
 			<a href="projects.html">Projects</a>
-			<a href="about.html">About</a>
+			<a href="contact.html">Contact</a>
 		</div>
 		<div>
-			<p>Welcome to my webpage!</p>
+			<p>Hello! Welcome to my personal webpage!</p>
+			<p>Please feel free to look around!</p>
 		</div>
-		<div class="footer">
-			<p>Footer Test</p>
-		</div>
+		<footer>
+			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)</p>
+			<p>Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
+			<p><a href="#top">Back to top</a></p>
+		</footer>
 	</body>
 </html>
