Centered index text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a href="projects.html">Projects</a>
 			<a href="contact.html">Contact</a>
 		</div>
-		<div>
+		<div style="text-align:center">
 			<p>Hello! Welcome to my personal webpage!</p>
 			<p>Please feel free to look around!</p>
 		</div>
