Updated Project Page

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 			<ul style="list-style-type:none">
 				<li>Galactic Engineer VR: VR Game based around looting derelict ships and stations, and crafting items to survive.<br>Status: <em class="redstatus">STILL IN EARLY DEVELOPMENT</em></li>
 				<br>
-				<li>Tech And Scales: Terraria mod that will add in a variety of Tech and Dragon themed items, weapons, and mobs.<br>Status: <em class="yellowstatus">Waiting until Terraria 1.4 releases before continuing major work</em></li>
+				<li>Tech And Scales: Terraria mod that will add in a variety of Tech and Dragon themed items, weapons, and mobs.<br>Status: <em class="yellowstatus">In Progress, Minorly delayed by Terraria 1.4</em></li>
 				<br>
 				<li>Custom Suit: A physical, custom-made costume for myself, made to look like my custom character.<br>Status: <em class="redstatus">3D Printer under repair</em></li>
 			</ul>
