Added Project dropdown meny, seperate pages for major projects,
Added project dropdown menu and seperate pages for all major projects
Fixed a few minor Typos

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ahndrek's Index Page</title>
+		<title>Index Page</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
 	</head>
@@ -12,7 +12,18 @@
 		</div>
 		<div class="topnav">
 			<a href="#">Index</a>
-			<a href="projects.html">Projects</a>
+			<div class="dropdown">
+				<button class="dropbtn">
+					Projects &darr;
+				</button>
+				<div class="dropdown-content">
+					<a href="projectsmain.html">Main Overview</a>
+					<a href="Projects/GalacticEngineerVR.html">Galactic Engineer VR</a>
+					<a href="Projects/TechAndScales.html">Tech And Scales</a>
+					<a href="Projects/CustomSuit.html">Custom Suit</a>
+					<a href="Projects/Others.html">Others</a>
+				</div>
+			</div>
 			<a href="contact.html">Contact</a>
 		</div>
 		<div style="text-align:center">
