Updated suit project status

--- a/Projects/CustomSuit.html
+++ b/Projects/CustomSuit.html
@@ -29,7 +29,7 @@
 		<div style="text-align:center">
 			<p>My custom suit project is a more personal project that is very long-term, but the end result is going to be a costume of my personal character I use.</p>
 			<p>The eyes are LED arrays with a Arduino controlling them. The head will consist of a one-way dark tinted visor so I can look out but nobody can see in. The body will consist of thin layers of foam covered with a smooth material.</p>
-			<p>Status: <em class="redstatus">3D Printer under repair</em></p>
+			<p>Status: <em class="redstatus">3D Printer broken, awaiting replacement parts</em></p>
 			<p> Finish Date: None, for now.</p>
 			<img src="../Assets/Suit_FullEye.png" alt="LED Eye Full View" style="width:403px;height:302px">
 			<img src="../Assets/Suit_CloseUpEye.png" alt="LED Eye Close Up" style="width:403px;height:302px">
