--- a/projectsmain.html
+++ b/projectsmain.html
@@ -33,7 +33,7 @@
 				<br>
 				<li><a href="Projects/TechAndScales.html">Tech And Scales</a>: Terraria mod that will add in a variety of Tech and Dragon themed items, weapons, and mobs.<br>Status: <em class="yellowstatus">In Progress, Minorly delayed by Terraria 1.4</em></li>
 				<br>
-				<li><a href="Projects/CustomSuit.html">Custom Suit</a>: A physical, custom-made costume for myself, made to look like my custom character.<br>Status: <em class="redstatus">3D Printer under repair</em></li>
+				<li><a href="Projects/CustomSuit.html">Custom Suit</a>: A physical, custom-made costume for myself, made to look like my custom character.<br>Status: <em class="redstatus">3D Printer broken, awaiting replacement parts</em></li>
 			</ul>
 			<p><u>Here is a list of projects I have finished and am still supporting.</u></p>
 			<ul style="list-style-type:none">
