--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Contact Page</title>
-		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
+		<title>Contact Page - Ahndrek's Website</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<a name="top"></a>
-		<div class="header">
-			<h1>Contact Page</h1>
-		</div>
 		<div class="topnav">
 			<a href="index.html">Index</a>
-			<div class="dropdown">
-				<button class="dropbtn">
-					Projects &darr;
-				</button>
-				<div class="dropdown-content">
-					<a href="projectsmain.html">Main Overview</a>
-					<a href="Projects/GalacticEngineerVR.html">Galactic Engineer VR</a>
-					<a href="Projects/TechAndScales.html">Tech And Scales</a>
-					<a href="Projects/CustomSuit.html">Custom Suit</a>
-					<a href="Projects/Others.html">Others</a>
-				</div>
-			</div>
+			<a href="projects.html">Projects</a>
 			<a href="#">Contact</a>
 		</div>
-		<div style="text-align:center">
-			<p>I am active on these platforms <i><b>ONLY</b></i>. If you see my name elsewhere, it's a fake!</p>
-			<p>Discord: <em>Ahndrek Li'Cyri #0001</em></p>
-			<p>Twitter: <em><a href="https://twitter.com/Ahndrek_LiCyri" target="_blank">@Ahndrek_LiCyri</a></em></p>
-			<p>Steam: <em><a href="https://steamcommunity.com/id/AhndrekLiCyri/" target="_blank">Ahndrek Li'Cyri</a></em></p>
-			<p>Xbox: <em>AhndrkLiCyri</em></p>
-			<p>Terraria Forums: <em><a href="https://forums.terraria.org/index.php?members/ahndrek-licyri.142721/" target="_blank">Ahndrek Li'Cyri</a></em></p>
+		<div class="content">
+			<hr>
+			<p>Here are all the ways you can easily reach me:<br>
+			[Discord] Ahndrek Li'Cyri#0001<br>
+			[Twitter] <a href="https://twitter.com/Ahndrek_LiCyri" target="_blank">@Ahndrek_LiCyri</a><br>
+			[Reddit] <a href="https://www.reddit.com/user/Andr3w246" target="_blank">u/Andr3w246</a></p>
+			<hr>
+			<p>Here is all my game related accounts:<br>
+			[Steam] <a href="https://steamcommunity.com/id/AhndrekLiCyri/" target="_blank">Ahndrek Li'Cyri</a>
+			</p>
+			<hr>
+			<p>Here are active forums I am on:<br>
+			[Terraria] <a href="https://forums.terraria.org/index.php?members/ahndrek-licyri.142721/" target="_blank">Ahndrek Li'Cyri</a><br>
+			[KSP] <a href="https://forum.kerbalspaceprogram.com/index.php?/profile/205932-ahndrek-licyri/" target="_blank">Ahndrek Li'Cyri</a><br>
+			</p>
+			<hr>
 		</div>
 		<footer>
-			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)</p>
-			<p>Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
-			<p><a href="#top">Back to top</a></p>
+			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)<br>
+			Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
 		</footer>
 	</body>
 </html>
