--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>404: Not found</title>
+		<title>404: Page Not Found</title>
 	</head>
 	<body>
-		<h1>404: Page not found</h1>
-		<p>Are you lost? That page doesn't exist!</p>
-		<p>Back to <a href="index.html">Index page</a></p>
+		<h1>404: Page Not Found</h1>
+		<p>You seem lost... go back to the <a href="index.html">Index</a>?
 	</body>
 </html>
