--- a/index.html
+++ b/index.html
@@ -1,39 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Index Page</title>
-		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet"> 
+		<title>Index Page - Ahndrek's Website</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<a name="top"></a>
-		<div class="header">
-			<h1>Index Page</h1>
-		</div>
 		<div class="topnav">
 			<a href="#">Index</a>
-			<div class="dropdown">
-				<button class="dropbtn">
-					Projects &darr;
-				</button>
-				<div class="dropdown-content">
-					<a href="projectsmain.html">Main Overview</a>
-					<a href="Projects/GalacticEngineerVR.html">Galactic Engineer VR</a>
-					<a href="Projects/TechAndScales.html">Tech And Scales</a>
-					<a href="Projects/CustomSuit.html">Custom Suit</a>
-					<a href="Projects/Others.html">Others</a>
-				</div>
-			</div>
+			<a href="projects.html">Projects</a>
 			<a href="contact.html">Contact</a>
 		</div>
-		<div style="text-align:center">
-			<p>Hello! Welcome to my personal webpage!</p>
-			<p>Please feel free to look around!</p>
+		<div class="content">
+			<h1>Hello!</h1><hr>
+			<p>Welcome to my website!<br>
+			Please feel free to look around! Thank you for visiting!</p>
 		</div>
 		<footer>
-			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)</p>
-			<p>Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
-			<p><a href="#top">Back to top</a></p>
+			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)<br>
+			Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
 		</footer>
 	</body>
 </html>
