Fixed broken Stylesheet
Apparently Github Pages is case sensitive... whoops

--- a/projects/TechDragonsProject.html
+++ b/projects/TechDragonsProject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Tech And Dragons Project - Ahndrek's Website</title>
-		<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="../Assets/css/main.css">
 		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 	</head>
 	<body>
@@ -22,7 +22,7 @@
 		</div>
 		<div class="content">
 			<p>Small showcase of some items in the mod currently.</p>
-			<img src="../assets/images/project_TAD/TAD_itemshowcase.png">
+			<img src="../Assets/images/Project_TAD/TAD_itemshowcase.png">
 			<p>From left to right: Aluminium Ore, Aluminium Bar, Mk.1 Plasma Sword, Mk.1 Plasma Yo-Yo</p>
 		</div>
 		<div class="content">
