Even more case fixing
Apparently Github pages is VERY sensitive to case

--- a/projects/Mk1SuitProject.html
+++ b/projects/Mk1SuitProject.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="topnav">
 			<a href="../index.html">Index</a>
-			<a href="../Projects.html">Projects</a>
+			<a href="../projects.html">Projects</a>
 			<a href="../contact.html">Contact</a>
 		</div>
 		<div class="content">
@@ -21,17 +21,17 @@
 			<div class="slideshow-container">
 				<div class="slides1">
 					<div class="slideshow-numbertext">1 / 3</div>
-					<img src="../Assets/images/Project_suit/suit_eyeclose.jpg" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_eyeclose.jpg" style="width:100%">
 					<div class="slideshow-text">A close-up of the LED array used for the face. Eye being shown.</div>
 				</div>
 				<div class="slides1">
 					<div class="slideshow-numbertext">2 / 3</div>
-					<img src="../Assets/images/Project_suit/suit_eye.jpg" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_eye.jpg" style="width:100%">
 					<div class="slideshow-text">A shot of the whole LED array with a eye and nose pattern.</div>
 				</div>
 				<div class="slides1">
 					<div class="slideshow-numbertext">3 / 3</div>
-					<img src="../Assets/images/Project_suit/suit_doubleeye.jpg" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_doubleeye.jpg" style="width:100%">
 					<div class="slideshow-text">Showing both LED arrays with the eye and nose pattern.</div>
 				</div>
 			</div>
@@ -47,27 +47,27 @@
 			<div class="slideshow-container-2">
 				<div class="slides2">
 					<div class="slideshow-numbertext">1 / 5</div>
-					<img src="../Assets/images/Project_suit/suit_veryearlyprint.png" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_veryearlyprint.png" style="width:100%">
 					<div class="slideshow-text">The earliest blueprint and design for the eye controller.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">2 / 5</div>
-					<img src="../Assets/images/Project_suit/suit_earlyprint.png" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_earlyprint.png" style="width:100%">
 					<div class="slideshow-text">A different, newer design using multiple 8x8 LED arrays.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">3 / 5</div>
-					<img src="../Assets/images/Project_suit/suit_earlyprint2.png" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_earlyprint2.png" style="width:100%">
 					<div class="slideshow-text">Another different design that is using a 8x32 Flexible LED array and seperate LED's for the nose.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">4 / 5</div>
-					<img src="../Assets/images/Project_suit/suit_earlycode.png" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_earlycode.png" style="width:100%">
 					<div class="slideshow-text">Some early Arduino code for a early test version of the Project.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">5 / 5</div>
-					<img src="../Assets/images/Project_suit/suit_eyearray.png" style="width:100%">
+					<img src="../Assets/images/Project_Suit/suit_eyearray.png" style="width:100%">
 					<div class="slideshow-text">Arduino code showing how a "frame" is stored.</div>
 				</div>
 			</div>
