--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,12 @@
 		<div class="topnav">
 			<a href="index.html">Index</a>
 			<a href="projects.html">Projects</a>
+			<a href="character.html">Character</a>
 			<a href="#">Contact</a>
 		</div>
 		<div class="content">
 			<hr>
-			<p>Here are all the ways you can easily reach me:<br>
+			<p>Here are all the ways you can easily reach me (I'll respond fastest on discord):<br>
 			[Discord] <span style="user-select: all">Ahndrek Li'Cyri#0001</span><br>
 			[Twitter] <a href="https://twitter.com/Ahndrek_LiCyri" target="_blank">@Ahndrek_LiCyri</a><br>
 			[Reddit] <a href="https://www.reddit.com/user/Andr3w246" target="_blank">u/Andr3w246</a></p>
