--- a/projects/TechDragonsProject.html
+++ b/projects/TechDragonsProject.html
@@ -9,6 +9,7 @@
 		<div class="topnav">
 			<a href="../index.html">Index</a>
 			<a href="../projects.html">Projects</a>
+			<a href="../character.html">Character</a>
 			<a href="../contact.html">Contact</a>
 		</div>
 		<div class="content">
@@ -16,14 +17,22 @@
 			<p>A Terraria mod that will introduce many new weapons, items, enemies, and more based off a theme of Sci-Fi technology and Draconic influences.<br>
 			Current plans are to add content all the way from early game to Moon Lord, then possible Post-Moon Lord as well.</p>
 			<hr>
-			<p>Estimated Release Date: <i>Winter 2020 / Spring 2021</i><br>
+			<p>Estimated Release Date: <i>Spring 2021</i><br>
 			Note: This is only a <b>ESTIMATE</b> and may change at any time.
 			</p>
 		</div>
 		<div class="content">
-			<p>Small showcase of some items in the mod currently.</p>
-			<img src="../Assets/images/Project_TAD/TAD_itemshowcase.png">
-			<p>From left to right: Aluminium Ore, Aluminium Bar, Mk.1 Plasma Sword, Mk.1 Plasma Yo-Yo</p>
+			<p>Here are some images of the various parts of the mod so far.</p>
+			<hr>
+			<p>From left to right, top to bottom: <br>
+			Silicon Board, Blank PCB, Electro Crafter, Copper Wire Spool, Tin Wire Spool, Copper Traced PCB, Tin Traced PCB, Compact Old Tech, Silicon Ore, MN Rifle, T1 Assault</p>
+			<img src="../Assets/images/Project_TAD/InGame.png">
+			<br>
+			<p>Close up of the two current guns, MN Rifle and T1 Assault</p>
+			<img src="../Assets/images/Project_TAD/guns.png">
+			<br>
+			<p>Close up of the four PCB items</p>
+			<img src="../Assets/images/Project_TAD/boards.png">
 		</div>
 		<div class="content">
 			<p>Here is a quick Q&A about the mod.</p>
