--- a/projects/Mk1SuitProject.html
+++ b/projects/Mk1SuitProject.html
@@ -9,6 +9,7 @@
 		<div class="topnav">
 			<a href="../index.html">Index</a>
 			<a href="../projects.html">Projects</a>
+			<a href="../character.html">Character</a>
 			<a href="../contact.html">Contact</a>
 		</div>
 		<div class="content">
