Added update section to Index page
As described

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 			<p>Welcome to my website!<br>
 			Please feel free to look around! Thank you for visiting!</p>
 		</div>
+		<div class="content">
+			<h1>Recent Updates/Changes</h1><hr>
+			<p>Here is the last major update to my site/projects:<br>
+			Added (this) update section so people can see better what is going on with my projects, sites, and me!<br>
+			Projects are currently on pause, but will resume soon(-ish) hopefully!</p>
+		</div>
 		<footer>
 			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)<br>
 			Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
