--- a/projects/AhnBasicFirearmProject.html
+++ b/projects/AhnBasicFirearmProject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Ahndrek's Basic Firearms Project - Ahndrek's Website</title>
-		<link rel="stylesheet" type="text/css" href="../Assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 	</head>
 	<body>
@@ -13,13 +13,13 @@
 			<a href="../contact.html">Contact</a>
 		</div>
 		<div class="content">
-			<h1><img src="../Assets/images/Project_Firearm/icon.png"> Ahndrek's Basic Firearms <img src="../Assets/images/Project_Firearm/icon.png"></h1><hr>
+			<h1><img src="../assets/images/Project_Firearm/icon.png"> Ahndrek's Basic Firearms <img src="../assets/images/Project_Firearm/icon.png"></h1><hr>
 			<p>A Terraria mod that adds in a few early game gun-type ranged weapon for the Ranger class.<br>
 			Meant to help those who want to do a gun-only playthrough or are looking for more variety early game.</p>
 		</div>
 		<div class="content">
 			<p>Showcase of all added weapons to the mod</p>
-			<img src="../Assets/images/Project_Firearm/GunShowcase.png">
+			<img src="../assets/images/Project_Firearm/GunShowcase.png">
 		</div>
 		<div class="content">
 			<p><a href="https://forums.terraria.org/index.php?threads/ahndreks-basic-firearms.86913/" target="_blank">Terraria Forums Link</a><br>
