--- a/projects/Mk1SuitProject.html
+++ b/projects/Mk1SuitProject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Mk.1 Suit Project - Ahndrek's Website</title>
-		<link rel="stylesheet" type="text/css" href="../Assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 	</head>
 	<body>
@@ -22,17 +22,17 @@
 			<div class="slideshow-container">
 				<div class="slides1">
 					<div class="slideshow-numbertext">1 / 3</div>
-					<img src="../Assets/images/Project_Suit/suit_eyeclose.jpg" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_eyeclose.jpg" style="width:100%">
 					<div class="slideshow-text">A close-up of the LED array used for the face. Eye being shown.</div>
 				</div>
 				<div class="slides1">
 					<div class="slideshow-numbertext">2 / 3</div>
-					<img src="../Assets/images/Project_Suit/suit_eye.jpg" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_eye.jpg" style="width:100%">
 					<div class="slideshow-text">A shot of the whole LED array with a eye and nose pattern.</div>
 				</div>
 				<div class="slides1">
 					<div class="slideshow-numbertext">3 / 3</div>
-					<img src="../Assets/images/Project_Suit/suit_doubleeye.jpg" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_doubleeye.jpg" style="width:100%">
 					<div class="slideshow-text">Showing both LED arrays with the eye and nose pattern.</div>
 				</div>
 			</div>
@@ -42,33 +42,33 @@
 				<span class="slideshow-dot" onclick="currentSlide(3)"></span>
 			</div>
 		</div>
-		<script src="../Assets/js/slideshow.js"></script>
+		<script src="../assets/js/slideshow.js"></script>
 		<div class="content">
 			<p>Slideshow showcasing code and old bleprint designs</p>
 			<div class="slideshow-container-2">
 				<div class="slides2">
 					<div class="slideshow-numbertext">1 / 5</div>
-					<img src="../Assets/images/Project_Suit/suit_veryearlyprint.png" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_veryearlyprint.png" style="width:100%">
 					<div class="slideshow-text">The earliest blueprint and design for the eye controller.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">2 / 5</div>
-					<img src="../Assets/images/Project_Suit/suit_earlyprint.png" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_earlyprint.png" style="width:100%">
 					<div class="slideshow-text">A different, newer design using multiple 8x8 LED arrays.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">3 / 5</div>
-					<img src="../Assets/images/Project_Suit/suit_earlyprint2.png" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_earlyprint2.png" style="width:100%">
 					<div class="slideshow-text">Another different design that is using a 8x32 Flexible LED array and seperate LED's for the nose.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">4 / 5</div>
-					<img src="../Assets/images/Project_Suit/suit_earlycode.png" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_earlycode.png" style="width:100%">
 					<div class="slideshow-text">Some early Arduino code for a early test version of the Project.</div>
 				</div>
 				<div class="slides2">
 					<div class="slideshow-numbertext">5 / 5</div>
-					<img src="../Assets/images/Project_Suit/suit_eyearray.png" style="width:100%">
+					<img src="../assets/images/Project_Suit/suit_eyearray.png" style="width:100%">
 					<div class="slideshow-text">Arduino code showing how a "frame" is stored.</div>
 				</div>
 			</div>
@@ -84,6 +84,6 @@
 			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)<br>
 			Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
 		</footer>
-		<script src="../Assets/js/slideshow_2.js"></script>
+		<script src="../assets/js/slideshow_2.js"></script>
 	</body>
 </html>
