--- a/projects/TechDragonsProject.html
+++ b/projects/TechDragonsProject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Tech And Dragons Project - Ahndrek's Website</title>
-		<link rel="stylesheet" type="text/css" href="../Assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 	</head>
 	<body>
