Put up a new index for now with a site update

--- a/index.html
+++ b/index.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Index Page - Ahndrek's Website</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-		<link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
+		<title>Index Page</title>
+		<style>
+			html {
+				font-family: 'Monda', sans-serif;
+				text-align: center;
+			}
+		</style>
 	</head>
+	
 	<body>
-		<div class="topnav">
-			<a href="#">Index</a>
-			<a href="projects.html">Projects</a>
-			<a href="character.html">Character</a>
-			<a href="contact.html">Contact</a>
-		</div>
-		<div class="content">
-			<h1>Hello!</h1><hr>
-			<p>Welcome to my website!<br>
-			Please feel free to look around! Thank you for visiting!</p>
-		</div>
-		<div class="content">
-			<h1>Recent Updates/Changes</h1><hr>
-			<p>Here is the last major update to my site/projects:<br>
-			Added (this) update section so people can see better what is going on with my projects, sites, and me!<br>
-			Projects are currently on pause, but will resume soon(-ish) hopefully!</p>
-		</div>
-		<footer>
-			<p>Webpage Created by: Andrew H. (Ahndrek Li'Cyri)<br>
-			Hosted with <a href="https://pages.github.com/" target="_blank">Github Pages</a></p>
-		</footer>
+		<p>Hey there! Sorry there have been such little updates to this site.</p>
+		<p>Things have been very busy for me, and I am sorry for that.</p>
+		<p>However, I feel like I should very much update the site, as it has been a very long time.</p>
+		<p>The site is badly out of date in a lot of ways. So I will be "taking it down" for a bit while I work on the update.</p>
+		<p>Thank you for your understanding! -Ahndrek</p>
 	</body>
 </html>
